--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "browser-sync": "^2.27.9",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean": "^0.4.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.49.9"
   },
