--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
     "gulp-sass": "^5.1.0",
     "sass": "^1.49.9"
   },
