--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
   },
   "homepage": "https://github.com/amandaluu/workflow#readme",
   "devDependencies": {
+    "bootstrap": "^5.1.3",
     "browser-sync": "^2.27.9",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^5.1.0",
+    "jquery": "^3.6.0",
+    "mustache": "^4.2.0",
     "sass": "^1.49.9"
   },
   "dependencies": {
